# dmo-system

./: .coverage  .dockerignore  .env.example  CLAUDE.md  TODO.md  docker-compose.yaml  pyproject.toml
.claude/: settings.local.json
api/: Dockerfile  README.md  pyproject.toml
api/src/dmo_api/: __init__.py  dependencies.py  exceptions.py  main.py
api/src/dmo_api/routers/: __init__.py  activities.py  completions.py  dmos.py  reports.py
api/tests/: test_api.py
cli/: Dockerfile  pyproject.toml
cli/src/dmo_cli/: main.py
core/: README.md  pyproject.toml
core/src/dmo_core/: __init__.py  errors.py  models.py  service.py  utils.py
core/src/dmo_core/storage/: __init__.py  base.py  memory.py  postgres.py  sqlite.py
core/tests/: __init__.py  conftest.py  test_integration.py  test_models.py  test_service.py  test_storage_sqlite.py  test_utils.py
docs/: DMO_core_specification.md
web/: Dockerfile  README.md  pyproject.toml
web/src/dmo_web/: __init__.py  api_client.py  app.py
